<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#35AA9F"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:src="@drawable/im" />

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_Title"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:hint="@string/edit_Description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#E8E5E5" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:textColor="#F3EFEF"
        tools:ignore="TextFields" />

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_gravity="right"
        android:layout_margin="10sp"
        android:layout_weight="0"
        android:text="@string/edit_is_complete"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="5sp"
        android:text="@string/edit_priority"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_high_priority"
            android:text="@string/edit_high" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_medium_priority"
            android:text="@string/edit_medium" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_low_priority"
            android:text="@string/edit_low" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"

            android:background="@drawable/mybutton"
            android:text="@string/edit_save"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>